add: documentacion endpoint obtener carreras
